video fixed, but not stretched yet

--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -2312,7 +2312,7 @@ table, th, td {
   text-align: center;
   position: relative;
   width: 100%;
-  height: 80vh;
+  height: 42em;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -2321,6 +2321,11 @@ table, th, td {
 }
 
 #fundraising-title-text {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
   text-align: center; 
   line-height: 1.5em;
   font-size: 6rem;
@@ -2334,10 +2339,10 @@ table, th, td {
 
 .fundraising-title-video-container {
   position: absolute;
-  top: 0;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
-  width: auto;
-  max-height: 50%;
+  right: 0;
 }
 
 .fundraisers {
